<resources>
    <string name="app_name">Smart Dustbin</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="register_login">Register</string>
</resources>
