<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bkg1"
    tools:context="com.example.praveen.smartdustbin.LoginActivity"
    android:weightSum="1"
    android:id="@+id/login_form">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!-- Login progress -->

    <TextView
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_weight="0.00"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_marginBottom="70dp" />

    <!--<ProgressBar-->
        <!--android:id="@+id/login_progress"-->
        <!--style="?android:attr/progressBarStyleLarge"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:visibility="gone"-->
        <!--android:layout_weight="0.00" />-->

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="250dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:layout_weight="2.69"
                android:onClick="gotoAfterLogin"/>

            <Button
                android:id="@+id/forgot_password_button"
                android:text="@string/action_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="2.72" />

            <Button
                android:text="@string/register_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_activity_register_btn"
                android:onClick="gotoRegisterActivity"/>

        </LinearLayout>


</LinearLayout>
</ScrollView>